--- a/Guia-Java-JDBC/pom.xml
+++ b/Guia-Java-JDBC/pom.xml
@@ -29,6 +29,16 @@
             <version>2.9.0</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>6.2.3.Final</version>
+            <type>pom</type>
+        </dependency>
+
+
+
     </dependencies>
 
 </project>
